<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    tools:context="il.co.diamed.com.form.IncubatorActivity">



    <DatePicker
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        />

    <EditText
        android:id="@+id/location"
        android:hint="@string/formLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/date"/>

    <RadioGroup
        android:id="@+id/type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/location">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incTypeSI"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incTypeSII"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incTypeL"
            />
    </RadioGroup>


    <EditText
        android:id="@+id/serial"
        android:hint="@string/formSerial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/type"/>


    <EditText
        android:id="@+id/temp"
        android:hint="@string/incTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/serial"
        app:layout_constraintRight_toLeftOf="@id/time"/>


    <EditText
        android:id="@+id/time"
        android:hint="@string/formTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/serial"
        app:layout_constraintLeft_toRightOf="@id/temp"/>



    <EditText
        android:id="@+id/techname"
        android:hint="@string/formTechName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/serial"
        app:layout_constraintLeft_toRightOf="@id/time"/>


    <Button
        android:id="@+id/submit"
        android:text="submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/techname"/>



</android.support.constraint.ConstraintLayout>
