<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/diamedDevices"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#aa0000"
    android:padding="15dp"
    app:layout_constraintVertical_chainStyle="spread">

    <Button
        android:id="@+id/idInc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="deviceSelect"
        android:text="@string/incubator"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/idCent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="deviceSelect"
        android:text="@string/centrifuge"
        app:layout_constraintTop_toBottomOf="@id/idInc" />

    <Button
        android:id="@+id/idDiacent12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="deviceSelect"
        android:text="@string/diacent12"
        app:layout_constraintTop_toBottomOf="@id/idCent" />

    <Button
        android:id="@+id/idDiacentCW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="deviceSelect"
        android:text="@string/diacentCW"
        app:layout_constraintTop_toBottomOf="@id/idDiacent12" />

    <Button
        android:id="@+id/idGelstation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="deviceSelect"
        android:text="@string/idGeltation"
        app:layout_constraintTop_toBottomOf="@id/idDiacentCW" />

    <Button
        android:id="@+id/ih500"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="deviceSelect"
        android:text="@string/ih500"
        app:layout_constraintTop_toBottomOf="@id/idGelstation" />

    <Button
        android:id="@+id/ih1000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="deviceSelect"
        android:text="@string/ih1000"
        app:layout_constraintTop_toBottomOf="@id/ih500" />

    <Button
        android:id="@+id/test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="deviceSelect"
        android:text="test"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/ih1000" />


</android.support.constraint.ConstraintLayout>

