<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="characters"
        android:defaultValue="@string/pref_default_serial_number"
        android:inputType="textCapWords"
        android:key="speedometer"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_speedometer" />

    <EditTextPreference
        android:capitalize="characters"
        android:defaultValue="@string/pref_default_serial_number"
        android:inputType="textCapWords"
        android:key="thermometer"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_thermometer" />

    <EditTextPreference
        android:capitalize="characters"
        android:defaultValue="@string/pref_default_serial_number"
        android:inputType="textCapWords"
        android:key="barometer"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_barometer" />

    <EditTextPreference
        android:capitalize="characters"
        android:defaultValue="@string/pref_default_serial_number"
        android:inputType="textCapWords"
        android:key="timer"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_timer" />

</PreferenceScreen>
